getting tailwind working and moving AI calls to rust

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Consolas:wght500;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/index.css" />
+    <!-- Import your index.css -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WordsMaker9000</title>
